--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -1,4 +1,5 @@
-{%extends 'all-news/base.html'%}
+{% extends 'all-news/base.html' %}
+{% load bootstrap %}    <!--load the bootstrap library.-->
 
 {% block content %}
 {{block.super}}
@@ -22,6 +23,13 @@
     </div>
     {% endfor %}
   
+  <form action="{% url 'newsToday' %}" method="post">  <!--define a form tag that sends a post request-->
+    {% csrf_token %}    <!--template tag that allows us to be protected from CSRF attacks-->
+
+    {% bootstrap_form letterForm layout='inline' %}
+    <input type="submit" value="Subscribe">     <!--define a bootstrap form template tag and pass in the form. and the layout of how the form will be displayed-->
+  </form>
+
   </div>  
 
 {% endblock %}
